syntax = "proto2";

package sf.solana.block_meta.v1;

message PbEscrowNftLayout {
  required uint64 unitPrice = 1;
  required uint64 fee = 2;
  required uint32 bump = 3;
}

message Arg {
  required string instruction_type = 1;
  optional PbEscrowNftLayout escrowNft = 2;
}

message InputAccounts {
  optional string owner = 1;
  optional string helioSignatureWallet = 2;
  optional string ownerNftAccount = 3;
  optional string escrowAccount = 4;
  optional string escrowNftAccount = 5;
  optional string nftMetadataAccount = 6;
  optional string escrowPda = 7;
  optional string mint = 8;
  optional string currency = 9;
  optional string tokenProgram = 10;
  optional string associatedTokenProgram = 11;
  optional string sysvarInstructions = 12;
  optional string systemProgram = 13;
  optional string nftMasterEdition = 14;
  optional string ownerTokenRecord = 15;
  optional string destinationTokenRecord = 16;
  optional string authRulesProgram = 17;
  optional string authRules = 18;
  optional string metaplexMetadataProgram = 19;
  optional string sender = 20;
  optional string senderNftAccount = 21;
  optional string senderTokenAccount = 22;
  optional string recipient = 23;
  optional string recipientTokenAccount = 24;
  optional string helioFeeTokenAccount = 25;
  optional string daoFeeTokenAccount = 26;
  optional string helioFeeAccount = 27;
  optional string daoFeeAccount = 28;
}

message Meta {
  required string block_date = 1;
  required int64 block_time = 2;
  required string tx_id = 3;
  required string dapp = 4;
  required uint64 block_slot = 5;
  required uint32 instruction_index = 7;
  required bool is_inner_instruction = 8;
  required uint32 inner_instruction_index = 9;
  required string instruction_type = 10;
  required Arg args = 11;
  required InputAccounts input_accounts = 12;
}

message Output {
  repeated Meta data = 1;
}